# server-brand

./: .copier-answers.yml  .pre-commit-config.yaml  .travis.yml  README.md
.github/workflows/: test.yml
disable_odoo_online/: README.rst  __manifest__.py
disable_odoo_online/i18n/: de.po  disable_odoo_online.pot  es.po  fr.po  hr.po  hr_HR.po  it.po  nl_NL.po  pt_BR.po  sl.po
disable_odoo_online/models/: publisher_warranty_contract.py
disable_odoo_online/readme/: CONTRIBUTORS.md  CONTRIBUTORS.rst  DESCRIPTION.md  DESCRIPTION.rst
disable_odoo_online/views/: ir_ui_menu.xml  res_config_settings_views.xml
hr_expense_remove_mobile_link/: README.rst  __manifest__.py
hr_expense_remove_mobile_link/readme/: CONTRIBUTORS.md  CONTRIBUTORS.rst  DESCRIPTION.md  DESCRIPTION.rst
hr_expense_remove_mobile_link/views/: hr_expense.xml
portal_odoo_debranding/: README.rst  __manifest__.py
portal_odoo_debranding/readme/: CONTRIBUTORS.md  CONTRIBUTORS.rst  DESCRIPTION.md
portal_odoo_debranding/views/: portal_templates.xml
remove_odoo_enterprise/: README.rst  __init__.py  __manifest__.py
remove_odoo_enterprise/data/: ir_module_module.xml
remove_odoo_enterprise/i18n/: es.po  es_CL.po  es_VE.po  hr.po  it.po  pt_BR.po  remove_odoo_enterprise.pot  sv.po
remove_odoo_enterprise/models/: __init__.py  base.py  ir_module_module.py  res_config_settings.py
remove_odoo_mobile_appstore/: README.rst  __manifest__.py
res_config_settings_enterprise_remove/: README.rst  __init__.py  __manifest__.py
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+26 files in other folders)
