[project]
name = "odoo-addons-oca-server-brand"
version = "17.0.20240729.0"
dependencies = [
    "odoo-addon-disable_odoo_online>=17.0dev,<17.1dev",
    "odoo-addon-remove_odoo_enterprise>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
